changed poisson to binomial distribution

--- a/t_test.ipynb
+++ b/t_test.ipynb
@@ -70,15 +70,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean of group A: 0.01825\n",
-      "Mean of group B: 0.0158375\n",
-      "Lift of a over b: 0.1523283346487765\n"
+      "Mean of group A: 0.01855\n",
+      "Mean of group B: 0.0159625\n",
+      "Lift of a over b: 0.1620986687548942\n"
      ]
     }
    ],
    "source": [
-    "effect_a = np.random.poisson(lam = a_mean, size = a_size)\n",
-    "effect_b = np.random.poisson(lam = b_mean, size = b_size)\n",
+    "effect_a = np.random.binomial(p = a_mean, n = 1, size = a_size)\n",
+    "effect_b = np.random.binomial(p = b_mean, n = 1, size = b_size)\n",
     "\n",
     "print(f\"Mean of group A: {effect_a.mean()}\\nMean of group B: {effect_b.mean()}\")\n",
     "print(f\"Lift of a over b: {(effect_a.mean()/effect_b.mean())-1}\")"
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We have obtained a p_value of: 0.016885131713190935\n",
+      "We have obtained a p_value of: 0.010145765416983936\n",
       "We can reject the null hypothesis\n"
      ]
     }
