adding one more question

--- a/poisson_kisses.ipynb
+++ b/poisson_kisses.ipynb
@@ -107,9 +107,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cdca70e9",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "An what is the probability of having at least 7 kisses on each of the last four days?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6b384a2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability at least 7 kisses on each of the last 4 days: 31.86992%\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 7\n",
+    "each_day = 1 - poisson.cdf(mu = daily_kisses, k = k-1)\n",
+    "each_4_day = each_day**days\n",
+    "\n",
+    "print(f\"Probability at least {k} kisses on each of the last {days} days: {np.round(each_4_day*100, 5)}%\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03a5f1ca",
+   "id": "4d90e93e",
    "metadata": {},
    "outputs": [],
    "source": []
